[package]
name = "key-convertr"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bech32 = "0.9.1"
clap = { version = "4.1.4", features = ["derive"] }
hex = "0.4.3"
regex = {version = "1.7.1", features = ["std", "unicode-case"], default-features = false}
reqwest = { version = "0.11.14", features = ["json", "rustls-tls"], default-features=false }
rustls = "0.20.8"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"], default-features = false }
